--- a/src/pages/Home.vue.less
+++ b/src/pages/Home.vue.less
@@ -4,6 +4,11 @@
     }
 }
 
+div.card{
+    padding: 3px;
+    margin: 10px auto 10px auto
+}
+
 .card article.Verse {
     cursor: pointer;
     padding: 3px;
